--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -356,7 +356,7 @@ section{
 
 /*Home page*/
 .header{
-    background-image: url(../images/malibu.jpg);
+    background-image: url(../images/malibu-compressor.jpg);
     height: 100%;
     background-size: cover;
     background-position: center;
@@ -374,6 +374,12 @@ section{
 .intro{
 	display: table-cell;
 	vertical-align: middle;
+}
+@media (max-width: 500px) {
+	.intro {
+		vertical-align: 0;
+		padding-top: 45%;
+	}
 }
 .header h1{
 	margin: 0;
@@ -767,18 +773,18 @@ section{
 
 		h3 {
 			opacity: 1;
-			font-size: 25px;
+			transform: scale(1.5);
+			transition: transform 500ms ease;
 		}
 		.fa {
-			font-size: larger;
+			transform: scale(1.5);
+			transition: transform 500ms ease;
 		}
 	}
 }
 
     .tech-sentence {
-      //background-color: #fff;
       font-weight: bold;
-      //color: #000;
     }
 
 // For Resume Section
