--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2891,7 +2891,8 @@ section {
 .footer {
   background-color: #202020;
   text-align: center;
-  padding: 60px 0; }
+  padding: 60px 0;
+  position: relative; }
 
 .footer span {
   color: #51c2b9; }
@@ -3065,7 +3066,7 @@ body:before {
   position: fixed;
   top: 0px;
   left: 50%;
-  bottom: 150px;
+  bottom: 0px;
   transform: translateX(-50%);
   width: 4px;
   background-color: #fff;
