--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -730,6 +730,7 @@ section{
 	background-color: #202020;
 	text-align: center;
 	padding: 60px 0;
+	position: relative;
 }
 .footer span{
 	color: #51c2b9;
@@ -1013,7 +1014,7 @@ body {
     top:0px;
 	// top:212px;
     left:50%;
-    bottom:150px;
+    bottom: 0px;
     transform:translateX(-50%);
     width:4px;
     background-color:#fff;
