--- a/assets/tShirtCss/style.scss
+++ b/assets/tShirtCss/style.scss
@@ -86,15 +86,15 @@ h2 {
 }
 
 .shirt-blue {
-	background-image: url("../../imgs/tShirtImgs/shirt_blue.jpg");
+	background-image: url("../tShirtImgs/shirt_blue.jpg");
 }
 
 .shirt-pink {
-	background-image: url("../../imgs/tShirtImgs/shirt_pink.jpg");
+	background-image: url("../tShirtImgs/shirt_pink.jpg");
 }
 
 .shirt-yellow {
-	background-image: url("../../imgs/tShirtImgs/shirt_yellow.jpg");
+	background-image: url("../tShirtImgs/shirt_yellow.jpg");
 }
 
 .bottom-options {
@@ -323,7 +323,7 @@ h2 {
     padding: 1em;
 
 	.shirt-sizes {
-		background-image: url("../../imgs/tShirtImgs/shirt_icon.svg");
+		background-image: url("../tShirtImgs/shirt_icon.svg");
 		background-repeat: no-repeat;
 		background-position: center;
 		height: 3.5em;
