--- a/assets/museumCss/museumCSS.scss
+++ b/assets/museumCss/museumCSS.scss
@@ -49,7 +49,8 @@ h1 {
   display: inline;
   
   a {
-  background-image: url("../../imgs/museumImgs/logo.jpg");
+  // background-image: url("../../imgs/museumImgs/logo.jpg");
+  background-image: url("../museumImgs/logo.jpg");
   height: 105px;
   width: 381px;
   display: block;
@@ -129,7 +130,7 @@ input[type="text"] {
 
 .banner {
   background-size: 100%;
-  background-image: url("../../imgs/museumImgs/banner.jpg");
+  background-image: url("../museumImgs/banner.jpg");
   background-repeat: no-repeat;
   border-radius: 5px;
   color: white;
